# bazel-rules-runc

./: .bazelrc  .gitignore  Cargo.toml  LICENSE  MODULE.bazel  README.md  REPO.bazel  multitool.lock.json
.devcontainer/: devcontainer.json
.devcontainer/feature-bazel/: install.sh
.github/: renovate.json
.github/workflows/: ci.yml  renovate-tasks.yml
e2e/smoke/: BUILD.bazel  MODULE.bazel  README.md
runc/: BUILD.bazel  defs.bzl  import_to_tar.sh  runc_binary.tmpl.sh
runc/private/: defs.bzl
runc/private/container_import/: BUILD.bazel  Cargo.toml
runc/private/container_import/src/: main.rs
