module(name = "rules_runc")

# To fully update lockfile: bazel mod deps --lockfile_mode=refresh

bazel_dep(name = "aspect_bazel_lib", version = "2.21.1")
bazel_dep(name = "rules_multitool", version = "1.9.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_go", version = "0.57.0")
bazel_dep(name = "rules_shell", version = "0.6.0")

bazel_dep(name = "rules_oci", version = "2.2.6")

bazel_dep(name = "aspect_rules_lint", version = "1.6.0", dev_dependency = True)

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "undocker",
    build_file = "//:third_party/undocker.BUILD.bazel",
    integrity = "sha256-VGFF7OjOHmv94llGpMajZbydqwowh7XBYOE2NOq3+OA=",
    strip_prefix = "undocker",
    urls = ["https://git.jakstys.lt/motiejus/undocker/archive/v1.2.3.tar.gz"],
)

multitool = use_extension("@rules_multitool//multitool:extension.bzl", "multitool")
multitool.hub(lockfile = "//:multitool.lock.json")
use_repo(multitool, "multitool")
# @multitool//tools/runc:toolchain_type
