module(name = "rules_runc_e2e_smoke")

bazel_dep(name = "rules_runc")
local_path_override(
    module_name = "rules_runc",
    path = "../..",
)

bazel_dep(name = "rules_oci", version = "2.2.6")
single_version_override(
    module_name = "rules_oci",
    patches = ["//:patches/rules_oci_flexible_loader.patch"],
    patch_strip = 1,
)

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "alpine",
    digest = "sha256:4b7ce07002c69e8f3d704a9c5d6fd3053be500b7f1c69fc0d80990c2ad8dd412",
    image = "docker.io/library/alpine",
    platforms = [
        "linux/amd64",
        "linux/arm64",
    ],
    tag = "3.22.2",
)
use_repo(
    oci,
    "alpine",
    "alpine_linux_amd64",
    "alpine_linux_arm64",
)
